fixed word wrapping

--- a/src/components/headerComponents/rightSide.module.scss
+++ b/src/components/headerComponents/rightSide.module.scss
@@ -7,4 +7,5 @@
   color: white;
   margin-right: 20%;
   font-weight: 500;
+  white-space: nowrap;
 }
